# scellrun

./: .gitignore  =0.4  CLAUDE.md  Dockerfile  ISSUES.md  LICENSE  PLAN.md  README.md  README_zh.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: agent-demo.md  contributing.md  differentiation_research.md  quickstart.md
docs/v1demo/: cold_validation.md  decisions.jsonl  index.html  run.json
skills/: README.md
skills/scellrun/: SKILL.md
src/scellrun/: analyze.py  cli.py  decisions.py  defaults.py  export.py  report.py  review.py  runlayout.py  self_check.py  views.py
src/scellrun/profiles/: __init__.py  brain.py  default.py  joint_disease.py  kidney.py  tumor.py
src/scellrun/scrna/: annotate.py  convert.py  integrate.py  markers.py  qc.py
src/scellrun/templates/: scrna_annotate.html.j2  scrna_annotate_zh.html.j2  scrna_full_report.html.j2  scrna_full_report_zh.html.j2  scrna_integrate.html.j2  scrna_integrate_zh.html.j2  scrna_markers.html.j2  scrna_markers_zh.html.j2  scrna_qc.html.j2  scrna_qc_zh.html.j2
tests/: conftest.py  test_analyze.py  test_annotate.py  test_convert.py  test_decisions.py  test_export.py  test_integrate.py  test_markers.py  test_panel_autopick.py  test_pick_best_resolution.py  test_profiles.py  test_qc.py  test_readme.py  test_report.py  test_review.py  test_runlayout.py  test_self_check.py  test_skill_md.py  test_v1demo.py  test_views.py
