[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "scellrun"
version = "1.1.1"
description = "Opinionated, report-first CLI for single-cell and multi-omics analysis. Sane defaults baked in, defensible deliverables out."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Liu Xiyu", email = "xiyu.l@icloud.com" },
]
keywords = ["scRNA-seq", "single-cell", "multi-omics", "bioinformatics", "pipeline", "qc", "report"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "scanpy>=1.10",
  "anndata>=0.10",
  "pandas>=2.1",
  "numpy>=1.26",
  "matplotlib>=3.8",
  "jinja2>=3.1",
  "pydantic>=2.6",
  "igraph>=0.11",
  "leidenalg>=0.10",
  "harmonypy>=0.0.9",
  "scrublet>=0.2.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.4",
]
ai = ["anthropic>=0.39"]

[project.scripts]
scellrun = "scellrun.cli:app"

[project.urls]
Homepage = "https://github.com/drstrangerujn/scellrun"
Issues = "https://github.com/drstrangerujn/scellrun/issues"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# typer's idiomatic CLI signatures are full of typer.Option(...) defaults; B008 is
# unavoidable without an awkward refactor. Skip it for CLI modules.
"src/scellrun/cli.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
